src/assets/css/partials/_site.scss
/* ----------------------------------------------------------------------------
 * Site sections
 * ------------------------------------------------------------------------- */

// For headroom.js
.headroom {

}
.headroom--top .aa_nav {
  background-color: transparent;
  // height: 50px;
  // min-height: 50px;
}
.headroom--not-top .aa_nav {
  background-color: rgba(255,255,255,0.7);
  background-color: rgba(0,0,0,0.4);

  ul li a {
    color: $w !important;
  }
  // height: 5px;
  // min-height: 0px;
}

.aa_navigation .aa_nav {
  transition: background-color 0.2s;
  margin: 0;

  ul {
    margin: 0;
    // Nav transitions (can't nest these with SCSS)
    li:after {
      display: block;
      position: absolute;
      left: 0;
      bottom: -3px;
      width: 30%;
      margin-left: 35%;
      height: 0px;
      background-color: $accent;
      content: "";
      transition: width 0.2s ease-in-out, margin-left 0.2s ease-in-out;
    }
    li:hover:after, li.active:after  {
      width: 100%;
      height: 3px;
      margin-left: 0%;
    }
    li.current-menu-item {
      opacity: 1;
      background-color: $accent;
      a {
        color: white;
        font-weight: bold;
      }
    }
    li.current-menu-item:after {
      display: block;
      position: absolute;
      left: 0;
      bottom: -3px;
      width: 100%;
      height: 3px;
      margin-left: 0;
      background-color: $accent;
      content: "";
      transition: width 0.2s ease-in-out, margin 0.2s;
    }
    li.current-menu-item:hover:after {
        width: 100%;
        background-color: $accent;
        // margin-left: 30%; // (Original width - final width) / 2
    }
    //////////////// end nav transitions

    li {
      position: relative;
      display: inline-block;
      // On the fence about having this fixed width
      // width: 5.0rem;
      margin: 0 0.40rem 0 0;

      :hover {
        text-decoration: none;
        background-color: transparent;
        border: none;
      }
      a {
        font-family: $f2_lit;
        text-transform: uppercase;
        font-size: 1.00rem;
        display: block;
        padding: 1.0rem 1.0rem 0.50rem 1.0rem;
        color: $b;
        :hover {
          font-weight: bold;
          text-decoration: none;
        }
        :active, :visited {
          color: $b;
          text-decoration: none;
        }
      }
      a:hover, a:focus {
        text-decoration: none;
        outline: 0;
        background-color: transparent;
      }
    }
  }
}

.navbar-header .navbar-brand {
  font: normal 800 2.2rem/1.0 $f6_lit;
}

nav.post-navigation {
  h2.screen-reader-text {
    // Title "Post navigation"
    @extend .__ext_base_subtitle;
  }
  .nav-links {

  }
}

.cover {
  height: 400px;
  background-image: url('assets/img/bg-cover.jpeg');
  background-size: cover;
  // border-top: 10px solid $c-contrast;
  // border-bottom: 20px solid $c-contrast;
  // box-shadow: 0px 5px 10px #ccc;
  box-shadow: inset 0 0 50px #ccc;
  .accent-block {
    display: inline-block;
    background-color: rgba(255,255,255,0.4);
    color: $b;
    padding: 2.0rem;
    margin: 3.0rem 0;
    transition: background-color 0.5s, border-color 0.4s ease-in-out;
    border-bottom: 3px solid transparent;
    h1 { // Name
      font: normal 100 4.0rem/2.50rem $f6_lit;
      letter-spacing: -0.20rem;
      text-transform: uppercase;
      margin: 0;
    }
    h3 { // Title below name
      font: normal 300 1.25rem/2.55rem $f6_lit;
      letter-spacing: -0.10rem;
      text-transform: uppercase;
      margin: 0;
      margin-top: 0.60rem;
      // Little nudging to make it look right
      position: relative;
      left: 0.30rem;
    }
  }
  .accent-block:hover {
    border-bottom-color: $accent;
    background-color: rgba(255,255,255,0.7);
  }
}

.title-card {
  font: normal 300 2.2rem/1.0 $f6_lit;
  text-transform: uppercase;
  letter-spacing: -0.06rem;
  cursor: default;
}
.title-card:after {
  display: block;
  position: absolute;
  left: 0;
  bottom: -1.0rem;
  width: 100%;
  height: 1.0rem;
  margin-left: 0;
  background-color: $accent;
  content: "";
  transition: width 0.2s ease-in-out;
}
// .title-card:hover:after {
//   width: 89%;
// }

.flex-container {
  display: flex;
  flex-flow: row nowrap;
}

.flex-center {
  justify-content: center;
}

.portfolio {
  max-width: 1120px;
  margin: 2.0rem 0;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
  align-content: space-between;
  .portfolio-item {
    display: flex;
    flex: 0 0 48%;
    flex-flow: column nowrap;
    width: 450px;
    border: 1px solid #DEDEDE;
    border-radius: 0.6rem;
    transition: all 0.1s ease-in;
    min-height: 425px;
    margin-bottom: 2.0rem;

    .grey {
      color: #c0c0c0;
    }
    .ital {
      font-style: italic;
    }

    h4 {
      font-family: $f2_lit;
      font-weight: 300;
      font-size: 1.3rem;
      font-weight: bold;
      text-align: center;
    }
    figure {
      flex: 1 0 75%;
      padding: 0.8rem 0.8rem 0.4rem 0.8rem;
      background-repeat: no-repeat;
      background-position: left top;
      background-size: cover;
      img {
        width: 100%;
      }
    }
    figcaption {
      flex: 0 0 25%;
      font-size: 1.0rem;
      border-top: 1px solid #DEDEDE;
      // border-top: 3px solid $accent;
      margin: 0 0.8rem;
    }
    &:hover {
      border: 1px black #DEDEDE;
      // transform: scale(1.05,1.05);
    }
  }
}

@media (max-width: 800px) {
  .portfolio .portfolio-item {
    flex-basis: 100%;
  }
}

.resume {
  max-width: 1120px;
  margin: 2.0rem 0;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  font-size: 1.1rem;

  // General stuff within resume
  section {
    flex: 1 0 47%;
    border: 1px solid black;
    margin: 1.4rem 1.6rem 0.8rem 0;
    padding: 0.6rem 1.0rem;
    padding-top: 0;
  }
  section:last-child {
    margin-right: 0;
  }
  .heading {
    h2 {
      font-family: $f2_lit;
      font-weight: 300;
      font-size: 1.5rem;
      // font-weight: bold;
      text-transform: uppercase;
      margin: 0;
      display: inline;
      position: relative;
      top: -0.8rem;
      background-color: white;
      padding: 0 0.6rem 0 0.6rem;
    }
  }
  // end general

  .header {
    flex-basis: 100%;
    margin-bottom: 1.0rem;
    h1 {
      font-family: $f6_lit;
      font-size: 4.0rem;
      text-transform: uppercase;
      letter-spacing: -0.2rem;
      text-align: center;
    }
    .badges {
      font-size: 1.7rem;
      text-align: center;
      & > a {
        margin-right: 0.6rem;
      }
    }
  }

  .skills {
    flex-basis: 100%;

    .split {
      display: flex;
      flex-flow: row wrap;
      justify-content: space-around;
      margin-bottom: 1.5rem;
      & > *:first-child {
        border-left: none;
      }
      & > * {
        flex: 1 0 32%;
        border-left: 1px solid #DEDEDE;
      }
      h3 {
        text-align: center;
        font-family: $f2_lit;
        font-weight: bold;
        text-transform: uppercase;
      }
      li {
        font-size: 1.0rem;
        list-style-type: none;
        text-align: center;
      }
    }
  }
  .experience {

    li {
      list-style-type: none;

      strong {
        font-family: $f1_lit;
        font-weight: 600;
        font-size: 1.2rem;
        letter-spacing: -0.08rem;
        text-transform: uppercase;
      }
    }
  }
  .education {
  }
}

// Category listing styles
.aa_wrap .aa_no_results  {
  .content-title {
    margin-bottom: 5rem;
  }
}

// Root style for all pages
.aa_wrap {
  margin: 1.0rem 0 3.0rem 0;
  .content-title {
    @extend .__ext_base_title;
  }
  .content-header-small {
    @extend .__ext_base_subtitle;
  }
  .post-title {
    @extend .__ext_base_title;
    .post-subtitle {
      @extend .__ext_posted_on;
      font-family: $f1_lit;
    }
  }

  article.aa_content {
    margin: 1.0rem 0 4.0rem 0;
  }
  .content {
    @extend .__ext_body-serif;
  }
  .content-sans {
    @extend .__ext_body-sans-serif;
  }
}

.comments-area {
  .comments-title, .comment-reply-title {
    // Title: "x thoughts on 'Post Name'""
    @extend .__ext_base_subtitle;
  }
  .comment-list {

  }
}

// Sidebar styles
.sidebar {
  margin-top: 3.0rem;
  margin-bottom: 1.5rem;

  // Individual widget boxes
  .widget {
    display: inline-block;
    // min-width: 200px;
    // width: 100px;
    font-family: $f1_lit;
    font-weight: 300;
    vertical-align: top;
    h1 {
      font: bold 1.00rem $f2_lit;
      // letter-spacing: 0.20rem;
      text-transform: uppercase;
      margin-bottom: 1.0rem;
    }
    ul {
      list-style-type: none;
      li {
        font-size: 0.90rem;
        margin: 0.40rem 0;
        a:hover {
          color: $b;
          text-decoration: underline;
          :focus {
            outline: 0;
          }
        }
      }
    }
  }
}

// Search box styles
.search-form {
  font: normal 300 0.80rem $f1_lit;
  text-transform: uppercase;
}

// Inverse sidebar and footer styles
.sidebar-container, .footer-container {
  background-color: $w;
  color: $b;
}
.sidebar-container-inverse, .footer-container-inverse {
  background-color: $b;
  color: $w;
  a {
    color: $w;
  }
  a:hover {
    color: darken($w, 10) !important;
  }
}

// Footer styles
.footer {
  margin: 3.0rem 0;
  p {
    text-align: right;
    font-family: $f2_lit;
    font-size: 0.80rem;
    text-transform: uppercase;
  }
}

// Extensions
.__ext_base_title {
  font: normal 900 2.80rem/1.0 $f6_lit;
  letter-spacing: -0.06rem;
  text-align: center;
  margin-bottom: 1.0rem;
  a {
    color: $b;
    text-decoration: none;
  }
}
.__ext_base_subtitle {
  font: normal 300 1.1rem/1.0 $f6_lit;
  // text-transform: uppercase;
  letter-spacing: -0.04rem;
  margin-bottom: 1.0em;
}
.__ext_body-serif {
  font: normal 400 1.40rem/1.6 $f4_lit; // Serif
}
.__ext_body-sans-serif {
  font: normal 300 1.20rem/1.5 $f1_lit; // Non-serif
}
.__ext_posted_on {
  display: block;
  font: normal 1.0rem/1.0 $f2_lit;
  letter-spacing: 0.05rem;
  text-transform: uppercase;
  padding-top: 1.0rem;
  color: #AAA;
  a {
    color: #AAA;
    :hover {
      color: #AAA;
    }
  }
}

